# FeliksEngine

./: CMakeLists.txt  FeliksEngine.kdev4  README.md  compile_commands.json
.kdev4/: FeliksEngine.kdev4
doc/: volume.ods
src/: CMakeLists.txt  feliksengine.cpp  main.cpp
src/Windows/: CMakeLists.txt
src/headers/: std_lib_facilities.h
text/: INFO.txt
